SERVER-6801: Error when aggregation's $substr expression results in invalid UTF-8